# NumRec-MCSim

./: .gitignore  CMakeLists.txt  Makefile  MyPlot.py  README.md  newMakefileMinuit
include/: LinearTheory.h  MyFileReader.h
includes/: Interface.h  LinearTheory.h  MaxLikelihood.h  MyChiSquared.h  MyFileReader.h  MyMinimizer.h  MyPdf.h  Preamble.h
src/: LinearTheory.cpp  Main.cpp  MaxLikelihood.cpp  MyChiSquared.cpp  MyFileReader.cpp  MyMinimizer.cpp  MyPdf.cpp
